<resources>
    <string name="app_name">注册与登录</string>
    <string name="action_settings">设置</string>
    <!-- Strings related to login -->
    <string name="prompt_username">请输入用户名</string>
    <string name="prompt_email">请输入邮箱地址</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_up">注册</string>
    <string name="action_read_input">读取输入</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮箱地址无效</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">必须填写</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
